[package]
name = "wirespider"
version = "0.4.2"
authors = ["Linus Karl <linus@lotz.li>"]
license = "GPL-3"
edition = "2021"
readme = "README.md"
description = "Wirespider distributes wireguard tunnel configurations and routes"

[dependencies]
clap = { version = "4", features = ["derive","env"] }
clap_complete = "4"
lazy_static = "1.4.0"
itertools = "0.10.5"
getset = "0.1.2"

#wireguard
wireguard-uapi = "2.0.3"
boringtun = { git = "https://github.com/cloudflare/boringtun.git" }
x25519-dalek = { version = "=2.0.0-rc.2", features = ["serde"]}
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", branch="update-deps", features = ["serde"]}
curve25519-dalek = { git = "https://github.com/DenisKolodin/curve25519-dalek", branch="zeroize-1.5", features = ["serde"]}

# grpc
tonic = { version = "0.8", features = ["tls", "tls-webpki-roots"]}
prost = "0.11.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["net", "time"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
typed-builder = "0.11.0"

# tarpc
tarpc = { version = "0.31", default-features = false, features = ["tokio1", "serde-transport", "serde-transport-bincode"] }
serde = "1"
bincode = "1"
serde_json = "1"

#database
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "uuid", "migrate", "macros" ] }
base64 = "0.21"
rand = { version = "0.8", features = ["getrandom"] }
ipnet = { version = "2.4", features = ["serde"] }
iprange = "0.6.7"
eui48 = { git = "https://github.com/returntoreality/eui48.git" }
uuid = { version = "1", features = ["v4", "serde"] }

# tracing
tracing = {version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-unwrap = "0.10"

# error handling
anyhow = "1"
thiserror = "1"

# nat traversal
stun_codec = "0.2.0"
bytecodec = "0.4.15"
trackable = "1.2.0"
network-interface = "=0.1.6"

# shutdown
tokio-graceful-shutdown = "0.12"

# retry
backoff = {version = "0.4.0", features = [ "futures", "tokio" ] }

[build-dependencies]
tonic-build = { version = "0.8" }
prost-build = { version = "0.11" }
clap = { version = "4", features = ["derive","env"] }
clap_complete = "4"
uuid = "1"
ipnet = "2.4.0"
serde = "1"
tonic = { version = "0.8", features = ["tls", "tls-webpki-roots"]}

[features]
network-test = []

[package.metadata.deb]
maintainer-scripts = "debian/"
depends = "$auto, wireguard-tools, iproute2"
section = "net"
assets = [
    ["target/release/wirespider", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/wirespider/README", "644"],
    ["CHANGELOG.md", "usr/share/doc/wirespider/CHANGELOG", "644"],
    ["systemd/system/wirespider-client@.service", "lib/systemd/system/", "644"],
    ["systemd/system/wirespider-server.service", "lib/systemd/system/", "644"],
    ["systemd/wirespider/wg0", "etc/wirespider/wg0-example", "644"],
    ["completions/_wirespider", "usr/share/zsh/site-functions/", "644"],
    ["completions/wirespider.bash", "usr/share/bash-completion/completions/wirespider", "644"],
]

[package.metadata.generate-rpm.requires]
wireguard-tools = "*"
iproute2 = "*"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/wirespider", dest = "/usr/bin/", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/wirespider/README", mode = "644" },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/wirespider/CHANGELOG", mode = "644" },
    { source = "systemd/system/wirespider-client@.service", dest = "/lib/systemd/system/wirespider-client@.service", mode = "644" },
    { source = "systemd/system/wirespider-server.service", dest = "/lib/systemd/system/wirespider-server.service", mode = "644" },
    { source = "systemd/wirespider/wg0", dest = "/etc/wirespider/wg0-example", mode = "644" },
    { source = "completions/_wirespider", dest = "/usr/share/zsh/site-functions/_wirespider", mode = "644" },
    { source = "completions/wirespider.bash", dest = "/usr/share/bash-completion/completions/wirespider", mode = "644" },
]

[patch.crates-io]
# x25519-dalek = { version = "=2.0.0-rc.2"}
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", branch="update-deps", features = ["serde"]}
curve25519-dalek = { git = "https://github.com/DenisKolodin/curve25519-dalek", branch="zeroize-1.5"}