[package]
name = "wirespider"
version = "0.5.1"
authors = ["Linus Karl <linus@lotz.li>"]
license = "GPL-3"
edition = "2021"
readme = "README.md"
description = "Wirespider distributes wireguard tunnel configurations and routes"

[dependencies]
clap = { version = "4", features = ["derive","env"] }
clap_complete = "4"
lazy_static = "1.4.0"
itertools = "0.12.1"

#wireguard
wireguard-uapi = "3"
boringtun = { git = "https://github.com/cloudflare/boringtun.git", rev = "e1d6360d6ab4529fc942a078e4c54df107abe2ba"}
x25519-dalek = "2.0.1"

# grpc
tonic = { version = "0.11", features = ["tls", "tls-webpki-roots"]}
prost = "0.12.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["net", "time"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
typed-builder = "0.18.1"

#database
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "uuid", "migrate", "macros" ] }
base64 = "0.22"
rand = { version = "0.8", features = ["getrandom"] }
ipnet = "2.9"
iprange = "0.6.7"
macaddr = "1.0"
uuid = { version = "1", features = ["v4"] }

# tracing
tracing = {version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-unwrap = "1.0"

# error handling
anyhow = "1"
thiserror = "1"

# nat traversal
stun_codec = "0.3.5"
bytecodec = "0.4.15"
trackable = "1.3.0"
network-interface = "1"

# shutdown
tokio-graceful-shutdown = "0.15"

# retry
backoff = {version = "0.4.0", features = [ "futures", "tokio" ] }

[build-dependencies]
tonic-build = { version = "0.11" }
prost-build = { version = "0.12" }
clap = { version = "4", features = ["derive","env"] }
clap_complete = "4"
uuid = "1"
ipnet = "2.9.0"
tonic = { version = "0.11", features = ["tls", "tls-webpki-roots"]}

[features]
network-test = []

[package.metadata.deb]
maintainer-scripts = "debian/"
depends = "$auto, wireguard-tools, iproute2"
section = "net"
assets = [
    ["target/release/wirespider", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/wirespider/README", "644"],
    ["CHANGELOG.md", "usr/share/doc/wirespider/CHANGELOG", "644"],
    ["systemd/system/wirespider-client@.service", "lib/systemd/system/", "644"],
    ["systemd/system/wirespider-server.service", "lib/systemd/system/", "644"],
    ["systemd/wirespider/wg0", "etc/wirespider/wg0-example", "644"],
    ["completions/_wirespider", "usr/share/zsh/site-functions/", "644"],
    ["completions/wirespider.bash", "usr/share/bash-completion/completions/wirespider", "644"],
]

[package.metadata.generate-rpm.requires]
wireguard-tools = "*"
iproute2 = "*"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/wirespider", dest = "/usr/bin/", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/wirespider/README", mode = "644" },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/wirespider/CHANGELOG", mode = "644" },
    { source = "systemd/system/wirespider-client@.service", dest = "/lib/systemd/system/wirespider-client@.service", mode = "644" },
    { source = "systemd/system/wirespider-server.service", dest = "/lib/systemd/system/wirespider-server.service", mode = "644" },
    { source = "systemd/wirespider/wg0", dest = "/etc/wirespider/wg0-example", mode = "644" },
    { source = "completions/_wirespider", dest = "/usr/share/zsh/site-functions/_wirespider", mode = "644" },
    { source = "completions/wirespider.bash", dest = "/usr/share/bash-completion/completions/wirespider", mode = "644" },
]
